# HW_verstka

./: pyproject.toml
html/: catalog.html  category.html  contacts.html  main.html
src/: web.py
