[tool.poetry]
name = "hw-verstka"
version = "0.1.0"
description = ""
authors = ["Valentina Ovsianik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
